cabal-version:       2.4

name:                mateamt
version:             0.0.0.0
synopsis:            A whole new matemat
-- description:
-- bug-reports:
license:             AGPL-3.0-only
license-file:        LICENSE
author:              nek0
maintainer:          nek0@nek0.eu
-- copyright:
category:            Web
extra-source-files:  CHANGELOG.md

flag develop
  description:       compile mateamt in developer mode. Authentication disabled,
  default:           False
  manual:            True

executable mateamt
  main-is:             Main.hs
  other-modules:       AppTypes
                     , AppTypes.Configuration
                     , Janitor
                     , Paths_mateamt
  -- other-extensions:
  build-depends:       base >=4.12.0.0 && < 5
                     , mateamt
                     , text
                     , bytestring
                     , base16-bytestring
                     , containers
                     , mtl
                     , opaleye
                     , postgresql-simple
                     , postgresql-simple-migration
                     , stm
                     , network
                     , servant
                     , servant-server
                     , time
                     , warp
                     , wai
                     , wai-logger
                     , wai-middleware-throttle
                     , HsYAML >= 0.2.1.0
                     , optparse-applicative
                     , case-insensitive
                     , iproute
                     , clock
  hs-source-dirs:      app
  ghc-options:       -Wall
  default-language:    Haskell2010

library
  exposed-modules:     API
                     , Control
                     , Control.Buy
                     , Control.Journal
                     , Control.User
                     , Control.Product
                     , Control.Auth
                     , Control.Avatar
                     , Control.Meta
                     , Control.Role
                     , Model
                     , Model.User
                     , Model.Product
                     , Model.Auth
                     , Model.Amount
                     , Model.Journal
                     , Model.Avatar
                     , Model.Role
                     , Types
                     , Types.Auth
                     , Types.Product
                     , Types.Reader
                     , Types.Refine
                     , Types.User
                     , Types.Purchase
                     , Types.Amount
                     , Types.Journal
                     , Types.Avatar
                     , Types.Meta
                     , Types.Role
                     , Util
  -- other-extensions:
  build-depends:       base >=4.12.0.0 && < 5
                     , servant
                     , servant-server
                     , servant-rawm >= 0.3.0.0
                     , opaleye
                     , aeson
                     , text
                     , time
                     , profunctors
                     , product-profunctors
                     , postgresql-simple
                     , warp
                     , wai
                     , wai-logger
                     , http-types
                     , http-api-data
                     , bytestring
                     , base16-bytestring
                     , base64-bytestring
                     , random-bytestring
                     , containers
                     , stm
                     , mtl
                     , pureMD5
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options:       -Wall
  if flag(develop)
    cpp-options:       -DDEVELOP
